Add : Buttons component
Added button components and fixed some issues.

--- a/index.html
+++ b/index.html
@@ -56,27 +56,31 @@
         </ul>
     </nav>
     <hr>
+    <h2>@button</h2>
+    <button>Primary button</button>
+    <button>Secondary button</button>
+    <hr>
     <h2>@header</h2>
     <header>
         <img src="images/Hero.svg" alt="">
-        <h1>Welcome to Ranjeet's Component Library.</h1>
+        <h1>Header text goes here.</h1>
     </header>
     <hr>
     <h2>@section</h2>
     <section>
         <h3>White Section</h3>
-        <div>White background section</div>
+        <div>This will have a White background.</div>
         <h3>Off-White Section</h3>
-        <div>This will have a grey background</div>
+        <div>This will have a grey background.</div>
     </section>
     <hr>
     <h2>@footer</h2>
     <footer>
         <div>This is our footer</div>
         <ul>
-            <li><a href="/">twitter</a></li>
-            <li><a href="/">discord</a></li>
-            <li><a href="/">telegram</a></li>
+            <li><a href="/">socialicon</a></li>
+            <li><a href="/">socialicon</a></li>
+            <li><a href="/">socialicon</a></li>
         </ul>
     </footer>
 </body>
