--- a/index.html
+++ b/index.html
@@ -4,89 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeet | Component Library</title>
+    <title>Ranjeet Singh</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 <body>
-    <h1>Welcome to Ranjeet's Component Library.</h1>
-    <p class="text">I am working on a component library which would make my projects look good and consistent.</p>
-    <hr>
-    <h2 class="heading_inside">@typography</h2>
-    <h1>This is a h1 heading.</h1>
-    <h2>This is a h2 heading.</h2>
-    <p>This is a paragraph.</p>
-    <small>This is comparatievly <strong>small</strong> text than others.</small>
-    <hr>
-    <h2 class=heading_inside>@containers</h2>
-    <h3 class="container">Fluid container</h3>
-    <div class="container">This is a fluid container going from end to end. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Voluptas nostrum porro autem. Nobis quaerat provident nulla ut totam quidem pariatur harum
-        voluptates rerum doloremque quia maiores dolorem, perspiciatis cum et.</div>
-    <h3 class="container">Center container</h3>
-    <div class="container-center">This is a center container. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Vel maxime harum dignissimos perspiciatis. Adipisci illo rerum sint nam quaerat quasi? Eos rerum eligendi vitae
-        iusto itaque cupiditate veritatis nesciunt quibusdam.</div>
-    <hr>
-    <h2 class=heading_inside>@links</h2>
-    <div class="container"><a href="/" class="links primary_link">Primary links</a>
-        <a href="/" class="links secondary_link">Secondary links</a>
-    </div>
-    <hr>
-    <h2 class=heading_inside>@lists</h2>
-    <h3>Unorderd list</h3>
-    <ul class="lists">
-        <li>Item1</li>
-        <li>Item2</li>
-        <li>Item3</li>
-    </ul>
-    <h3>Inline list</h3>
-    <ul class="inline-list">
-        <li class="inline-list-items">Item a</li>
-        <li class="inline-list-items">Item b</li>
-        <li class="inline-list-items">Item c</li>
-    </ul>
-    <h3>Reverse order list</h3>
-    <ol reversed>
-        <li>item</li>
-        <li>item</li>
-        <li>item</li>
-    </ol>
-    <hr>
-    <h2 class=heading_inside>@nav</h2>
     <nav class="navbar">
-        <h2 class="brand-title">BrandName</h2>
+        <h2 class="brand-title">WEB DEVLOPER</h2>
         <ul class="links">
             <li class="inline-list-items"><a href="/" class="nav-links">Home</a></li>
             <li class="inline-list-items"><a href="/" class="nav-links">Projects</a></li>
             <li class="inline-list-items"><a href="/" class="nav-links">About</a></li>
         </ul>
     </nav>
-    <hr>
-    <h2 class=heading_inside>@header</h2>
     <header class="container">
-        <img src="images/Hero.svg" alt="" class="hero-img">
-        <h1 class="hero-text">Header text goes here.</h1>
+        <img src="/images/Hero.svg" alt="Illustration here" class="hero-img">
+        <h1 class="hero-text">RANJEET SINGH THE<span class="spantext">WEB DEVLOPER</span></h1>
     </header>
-    <hr>
-    <h2 class=heading_inside> @section</h2>
+    <section class="sec-off-white">
+        <div class=" container-center">
+            <h3 class="sec-heading ">Technologies</h3>
+            <div class="sec-text">I am familiar with HTML 5 , CSS 3 , JavaScript,Node JS, React JS, Git and Web Hosting</div>
+        </div>
+    </section>
     <section>
-        <h3 class="sec-heading">White Section</h3>
-        <div class="sec-text">This will have a White background. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex distinctio numquam possimus earum facilis rerum, dolorem amet itaque magni dolores odit perspiciatis minima, quaerat soluta culpa cum reprehenderit mollitia vitae.</div>
+        <div>
+        <h3 class="sec-heading">Projects</h3>
+        <div class="sec-text">I like to showcase my work, so here you can take a look at my projects.</div>
+            <a href="/" class="links primary-link">Projects</a>
+        </div>
     </section>
     <section class="sec-off-white">
         <div class=" container-center">
-            <h3 class="sec-heading ">Off-White Section</h3>
-            <div class="sec-text">This will have a grey background. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex distinctio numquam possimus earum facilis rerum, dolorem amet itaque magni dolores odit perspiciatis minima, quaerat soluta culpa cum reprehenderit mollitia vitae.</div>
+            <h3 class="sec-heading ">Blogs</h3>
+            <div class="sec-text">I would love  to share my expereince to getting through all of these things, so here you can check out my blogs</div>
+            <a href="/" class="links secondary-link">Blogs</a>
         </div>
     </section>
-    <hr>
-    <h2 class="heading_inside">@footer</h2>
     <footer>
-        <div class="footer-heading">This is our footer</div>
+        <div class="footer-heading">Reach me</div>
         <ul class="non-bullet-list">
             <li class="inline-list-items"><a href="/" class="nav-links">socialicon</a></li>
             <li class="inline-list-items"><a href="/" class="nav-links">socialicon</a></li>
-            <li class="inline-list-items"><a href="/" class="nav-links">socialicon</a></li>
+            <li class="inline-list-items"><a href="/" class="nav-links">socialicon</a>
+            </li>
         </ul>
     </footer>
 </body>
