WIP: Added Projects
Added projects and blogs page.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <h2 class="brand-title">WEB DEVLOPER</h2>
         <ul class="links">
             <li class="inline-list-items"><a href="/" class="nav-links">Home</a></li>
-            <li class="inline-list-items"><a href="/" class="nav-links">Projects</a></li>
-            <li class="inline-list-items"><a href="/" class="nav-links">About</a></li>
+            <li class="inline-list-items"><a href="/projects/projectsList.html" class="nav-links">Projects</a></li>
+            <li class="inline-list-items"><a href="/blogs/blogList.html" class="nav-links">Blogs</a></li>
         </ul>
     </nav>
     <header class="container">
@@ -32,18 +32,18 @@
         <div>
         <h3 class="sec-heading">Projects</h3>
         <div class="sec-text">I like to showcase my work, so here you can take a look at my projects.</div>
-            <a href="/" class="links primary-link">Projects</a>
+            <a href="/projects/projectsList.html" class="links primary-link">Projects</a>
         </div>
     </section>
     <section class="sec-off-white">
         <div class=" container-center">
             <h3 class="sec-heading ">Blogs</h3>
             <div class="sec-text">I would love  to share my expereince to getting through all of these things, so here you can check out my blogs</div>
-            <a href="/" class="links secondary-link">Blogs</a>
+            <a href="/blogs/blogList.html" class="links secondary-link">Blogs</a>
         </div>
     </section>
     <footer>
-        <div class="footer-heading">Reach me</div>
+        <div class="footer-heading">Reach Me</div>
         <ul class="non-bullet-list">
             <li class="inline-list-items"><a href="/" class="nav-links">socialicon</a></li>
             <li class="inline-list-items"><a href="/" class="nav-links">socialicon</a></li>
