--- a/projects/projectsList.html
+++ b/projects/projectsList.html
@@ -43,7 +43,7 @@
     <section class="sec-off-white">
         <div class=" container-center">
             <h3 class="sec-heading ">CSS Component Library</h3>
-            <div class="sec-text">This is a CSS component library which is used to design my portfolio website.
+            <div class="sec-text">This is a CSS component library which I used to design my portfolio website.
             </div>
         </div>
         <div class="container">
