Add: Social links

--- a/index.html
+++ b/index.html
@@ -25,29 +25,36 @@
     <section class="sec-off-white">
         <div class=" container-center">
             <h3 class="sec-heading ">Technologies</h3>
-            <div class="sec-text">I am familiar with HTML 5 , CSS 3 , JavaScript,Node JS, React JS, Git and Web Hosting</div>
+            <div class="sec-text">I am familiar with HTML 5 , CSS 3 , JavaScript,Node JS, React JS, Git and Web Hosting
+            </div>
         </div>
     </section>
     <section>
         <div>
-        <h3 class="sec-heading">Projects</h3>
-        <div class="sec-text">I like to showcase my work, so here you can take a look at my projects.</div>
+            <h3 class="sec-heading">Projects</h3>
+            <div class="sec-text">I like to showcase my work, so here you can take a look at my projects.</div>
             <a href="/projects/projectsList.html" class="links primary-link">Projects</a>
         </div>
     </section>
     <section class="sec-off-white">
         <div class=" container-center">
             <h3 class="sec-heading ">Blogs</h3>
-            <div class="sec-text">I would love  to share my expereince to getting through all of these things, so here you can check out my blogs</div>
+            <div class="sec-text">I would love to share my expereince to getting through all of these things, so here
+                you can check out my blogs</div>
             <a href="/blogs/blogList.html" class="links secondary-link">Blogs</a>
         </div>
     </section>
     <footer>
         <div class="footer-heading">Reach Me</div>
         <ul class="non-bullet-list">
-            <li class="inline-list-items"><a href="/" class="nav-links">socialicon</a></li>
-            <li class="inline-list-items"><a href="/" class="nav-links">socialicon</a></li>
-            <li class="inline-list-items"><a href="/" class="nav-links">socialicon</a>
+            <li class="inline-list-items">
+                <a href="https://www.linkedin.com/in/ranjeet-singh-a07017205/"class="nav-links">Linkdin</a>
+            </li>
+            <li class="inline-list-items">
+                <a href="https://twitter.com/Ranjeet39287633" class="nav-links">Twitter</a>
+            </li>
+            <li class="inline-list-items">
+                <a href="https://github.com/jeetech77" class="nav-links">Github</a>
             </li>
         </ul>
     </footer>
