--- a/projects/projectsList.html
+++ b/projects/projectsList.html
@@ -54,9 +54,15 @@
     <footer>
         <div class="footer-heading">Reach me</div>
         <ul class="non-bullet-list">
-            <li class="inline-list-items"><a href="/" class="nav-links">socialicon</a></li>
-            <li class="inline-list-items"><a href="/" class="nav-links">socialicon</a></li>
-            <li class="inline-list-items"><a href="/" class="nav-links">socialicon</a></li>
+            <li class="inline-list-items">
+                <a href="https://www.linkedin.com/in/ranjeet-singh-a07017205/" class="nav-links">Linkdin</a>
+            </li>
+            <li class="inline-list-items">
+                <a href="https://twitter.com/Ranjeet39287633" class="nav-links">Twitter</a>
+            </li>
+            <li class="inline-list-items">
+                <a href="https://github.com/jeetech77" class="nav-links">Github</a>
+            </li>
         </ul>
     </footer>
 </body>
