--- a/blogs/blogList.html
+++ b/blogs/blogList.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogs</title>
+    <title>Ranjeet Singh | Blogs</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
@@ -16,6 +16,38 @@
             <li class="inline-list-items"><a href="/blogs/blogList.html" class="nav-links">Blogs</a></li>
         </ul>
     </nav>
+    <div>
+        <header class="container">
+            <!-- <img src="/images/aboutlco.png" alt="" class="hero-img"> -->
+            <h1 class="hero-text">Blogs</h1>
+        </header>
+    </div>
+    <section class="sec-off-white">
+        <div class="container-center">
+            <h3 class="sec-heading">Blog 1</h3>
+            <div class="sec-text" style="margin-bottom: 2rem;">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit dolores autem iusto atque harum neque non
+                quibusdam deleniti odio nemo beatae magni nostrum veritatis minima reprehenderit repudiandae debitis,
+                dolorem perferendis!
+            </div>
+        </div>
+        <div>
+            <a href="/" class="links secondary-link">Read more</a>
+        </div>
+    </section>
+    <section >
+        <div class=" container-center">
+            <h3 class="sec-heading ">Blog 2</h3>
+            <div class="sec-text" style="margin-bottom: 2rem;">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non saepe et eligendi, dignissimos nostrum
+                maiores perferendis molestias ab enim similique in tempore, cumque iste. Eaque dolores eius repellat
+                accusamus! Nihil?
+            </div>
+        </div>
+        <div>
+            <a href="/" class="links secondary-link">Read more</a>
+        </div>
+    </section>
     <footer>
         <div class="footer-heading">Reach me</div>
         <ul class="non-bullet-list">
