--- a/projects/projectsList.html
+++ b/projects/projectsList.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>Ranjeet Singh | Projects</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
@@ -18,14 +18,15 @@
     </nav>
     <div>
         <header class="container">
-            <img src="/images/aboutlco.png" alt="" class="hero-img">
+            <!-- <img src="/images/aboutlco.png" alt="" class="hero-img"> -->
             <h1 class="hero-text">Projects</h1>
         </header>
     </div>
     <section class="sec-off-white">
         <div class=" container-center">
             <h3 class="sec-heading ">DO YOU KNOW ME</h3>
-            <div class="sec-text">This is a simple quiz about how much well do you know me. If you don't know me enough, still try to play it once, You will get to know about me😊😊.</div>
+            <div class="sec-text">This is a simple quiz about how much well do you know me. If you don't know me enough,
+                still try to play it once, You will get to know about me😊😊.</div>
         </div>
         <div class="container">
             <a href="/" class="links primary-link">Live Demo</a>
