Feat : Added Responsiveness
Added responsiveness for mobile and small screen devices and other features like as hover and other things.

--- a/blogs/blogList.html
+++ b/blogs/blogList.html
@@ -18,13 +18,12 @@
     </nav>
     <div>
         <header class="container">
-            <!-- <img src="/images/aboutlco.png" alt="" class="hero-img"> -->
-            <h1 class="hero-text">Blogs</h1>
+            <h1 class="hero-text">Read My <span class="spantext">Blogs</span></h1>
         </header>
     </div>
     <section class="sec-off-white">
         <div class="container-center">
-            <h3 class="sec-heading">Blog 1</h3>
+            <h3 class="sec-heading">Dummy Blog 1</h3>
             <div class="sec-text" style="margin-bottom: 2rem;">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit dolores autem iusto atque harum neque non
                 quibusdam deleniti odio nemo beatae magni nostrum veritatis minima reprehenderit repudiandae debitis,
@@ -32,12 +31,12 @@
             </div>
         </div>
         <div>
-            <a href="/" class="links secondary-link">Read more</a>
+            <a href="/blogs/blogList.html" class="links secondary-link">Read more</a>
         </div>
     </section>
     <section >
         <div class=" container-center">
-            <h3 class="sec-heading ">Blog 2</h3>
+            <h3 class="sec-heading ">Dummy Blog 2</h3>
             <div class="sec-text" style="margin-bottom: 2rem;">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Non saepe et eligendi, dignissimos nostrum
                 maiores perferendis molestias ab enim similique in tempore, cumque iste. Eaque dolores eius repellat
@@ -45,7 +44,7 @@
             </div>
         </div>
         <div>
-            <a href="/" class="links secondary-link">Read more</a>
+            <a href="/blogs/blogList.html" class="links secondary-link">Read more</a>
         </div>
     </section>
     <footer>
