--- a/projects/projectsList.html
+++ b/projects/projectsList.html
@@ -18,8 +18,7 @@
     </nav>
     <div>
         <header class="container">
-            <!-- <img src="/images/aboutlco.png" alt="" class="hero-img"> -->
-            <h1 class="hero-text">Projects</h1>
+            <h1 class="hero-text">Check Out My<span class="spantext">Projects</span></h1>
         </header>
     </div>
     <section class="sec-off-white">
@@ -29,27 +28,18 @@
                 still try to play it once, You will get to know about me😊😊.</div>
         </div>
         <div class="container">
-            <a href="/" class="links primary-link">Live Demo</a>
-            <a href="/" class="links secondary-link">Code</a>
+            <a href="https://replit.com/@ranjeetSinghs/KnowMe#index.js?embed=1&output=1"
+                class="buttons links primary-link">Live Project</a>
+            <a href="https://github.com/jeetech77/Do-You-Know-Me" class="buttons links secondary-link">Source Code</a>
         </div>
     </section>
     <section>
         <h3 class="sec-heading">BATMAN QUIZ</h3>
         <div class="sec-text">This is a quiz on my DC favorite Superhero <strong>BATMAN.</strong></div>
         <div class="container">
-            <a href="/" class="links primary-link">Live Demo</a>
-            <a href="/" class="links secondary-link">Code</a>
-        </div>
-    </section>
-    <section class="sec-off-white">
-        <div class=" container-center">
-            <h3 class="sec-heading ">CSS Component Library</h3>
-            <div class="sec-text">This is a CSS component library which I used to design my portfolio website.
-            </div>
-        </div>
-        <div class="container">
-            <a href="/" class="links primary-link">Live Demo</a>
-            <a href="/" class="links secondary-link">Code</a>
+            <a href="https://replit.com/@ranjeetSinghs/BatmanQuiz-1#index.js?embed=1&output=1"
+                class="buttons links primary-link">Live Project</a>
+            <a href="https://github.com/jeetech77/Batman-Quiz" class="buttons links secondary-link">Source Code</a>
         </div>
     </section>
     <footer>
