--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>
     </nav>
     <header class="container">
-        <img src="/images/Hero.svg" alt="Illustration here" class="hero-img">
+        <img src="images/Hero.svg" alt="Illustration here" class="hero-img">
         <h1 class="hero-text">RANJEET SINGH THE<span class="spantext">WEB DEVLOPER</span></h1>
     </header>
     <section class="sec-off-white">
