--- a/projects/projectsList.html
+++ b/projects/projectsList.html
@@ -22,10 +22,57 @@
         </header>
     </div>
     <section class="sec-off-white">
-        <div class=" container-center">
+        <div class="container-center">
+            <h3 class="sec-heading ">Favorite Movies</h3>
+            <div class="sec-text">Here I am listing my favorite movies and series by creating a React app.
+            </div>
+        </div>
+        <div class="container">
+            <a href="https://jq3x2.csb.app/" class="buttons links primary-link">Live Project</a>
+            <a href="https://github.com/jeetech77/Pirates-Translation" class="buttons links secondary-link">Source
+                Code</a>
+        </div>
+    </section>
+    <section>
+        <h3 class="sec-heading">BATMAN QUIZ</h3>
+        <div class="sec-text">Are you a <strong>Batman</strong> fan, so play the quiz and check how much yoou know about
+            him.</strong></div>
+        <div class="container">
+            <a href="https://replit.com/@ranjeetSinghs/BatmanQuiz-1#index.js?embed=1&output=1"
+                class="buttons links primary-link">Live Project</a>
+            <a href="https://github.com/jeetech77/Batman-Quiz" class="buttons links secondary-link">Source Code</a>
+        </div>
+    </section>
+    <section class="sec-off-white">
+        <div class="container-center">
+            <h3 class="sec-heading ">Pirates Translation</h3>
+            <div class="sec-text">There's no one like <strong>Captain Jack Sparrow</strong>, You know what there's a
+                particular pirates language, Know more about it here...
+            </div>
+        </div>
+        <div class="container">
+            <a href="https://pirates-translation.netlify.app/" class="buttons links primary-link">Live Project</a>
+            <a href="https://github.com/jeetech77/Pirates-Translation" class="buttons links secondary-link">Source
+                Code</a>
+        </div>
+    </section>
+    <section>
+        <div class="container-center">
+            <h3 class="sec-heading ">Banana Talk</h3>
+            <div class="sec-text">We love <strong>Minions</strong>, do you know the language they speak is a real
+                language, here you can translate English to Minion language.</div>
+        </div>
+        <div class="container">
+            <a href="https://banana-talk-trans.netlify.app/" class="buttons links primary-link">Live Project</a>
+            <a href="https://github.com/jeetech77/Banana-Talk-Translator" class="buttons links secondary-link">Source
+                Code</a>
+        </div>
+    </section>
+    <section class="sec-off-white">
+        <div class="container-center">
             <h3 class="sec-heading ">DO YOU KNOW ME</h3>
-            <div class="sec-text">This is a simple quiz about how much well do you know me. If you don't know me enough,
-                still try to play it once, You will get to know about me😊😊.</div>
+            <div class="sec-text">This is a Node JS program about me, let's check it out how much you know about me.
+            </div>
         </div>
         <div class="container">
             <a href="https://replit.com/@ranjeetSinghs/KnowMe#index.js?embed=1&output=1"
@@ -35,7 +82,8 @@
     </section>
     <section>
         <h3 class="sec-heading">BATMAN QUIZ</h3>
-        <div class="sec-text">This is a quiz on my DC favorite Superhero <strong>BATMAN.</strong></div>
+        <div class="sec-text">Are you a <strong>Batman</strong> fan, so play the quiz and check how much yoou know about
+            him.</strong></div>
         <div class="container">
             <a href="https://replit.com/@ranjeetSinghs/BatmanQuiz-1#index.js?embed=1&output=1"
                 class="buttons links primary-link">Live Project</a>
@@ -46,13 +94,14 @@
         <div class="footer-heading">Reach me</div>
         <ul class="non-bullet-list">
             <li class="inline-list-items">
-                <a href="https://www.linkedin.com/in/ranjeet-singh-a07017205/" class="nav-links">Linkdin</a>
+                <a href="https://www.linkedin.com/in/ranjeet-singh-a07017205/" class="nav-links"
+                    target="_blank">Linkdin</a>
             </li>
             <li class="inline-list-items">
-                <a href="https://twitter.com/Ranjeet39287633" class="nav-links">Twitter</a>
+                <a href="https://twitter.com/Ranjeet39287633" class="nav-links" target="_blank">Twitter</a>
             </li>
             <li class="inline-list-items">
-                <a href="https://github.com/jeetech77" class="nav-links">Github</a>
+                <a href="https://github.com/jeetech77" class="nav-links" target="_blank">Github</a>
             </li>
         </ul>
     </footer>
