Add : Projects and links

--- a/projects/projectsList.html
+++ b/projects/projectsList.html
@@ -21,6 +21,15 @@
             <h1 class="hero-text">Check Out My<span class="spantext">Projects</span></h1>
         </header>
     </div>
+    <section>
+        <h3 class="sec-heading">Changes Calculator</h3>
+        <div class="sec-text">An assignment projects of NeogCamp, Here you can calculate chnages with minimum number of
+            notes</div>
+        <div class="container">
+            <a href="https://chnagescal.netlify.app/" class="buttons links primary-link">Live Project</a>
+            <a href="https://github.com/jeetech77/Cash-Register" class="buttons links secondary-link">Source Code</a>
+        </div>
+    </section>
     <section class="sec-off-white">
         <div class="container-center">
             <h3 class="sec-heading ">Favorite Movies</h3>
@@ -28,19 +37,18 @@
             </div>
         </div>
         <div class="container">
-            <a href="https://jq3x2.csb.app/" class="buttons links primary-link">Live Project</a>
+            <a href="https://favmovies.netlify.app/" class="buttons links primary-link">Live Project</a>
             <a href="https://github.com/jeetech77/Pirates-Translation" class="buttons links secondary-link">Source
                 Code</a>
         </div>
     </section>
     <section>
-        <h3 class="sec-heading">BATMAN QUIZ</h3>
-        <div class="sec-text">Are you a <strong>Batman</strong> fan, so play the quiz and check how much yoou know about
-            him.</strong></div>
+        <h3 class="sec-heading">Play with plants</h3>
+        <div class="sec-text">You must have seen that, there are few plants emojis in your emoji panel, did you even
+            know about them ? Let's figure it out.</div>
         <div class="container">
-            <a href="https://replit.com/@ranjeetSinghs/BatmanQuiz-1#index.js?embed=1&output=1"
-                class="buttons links primary-link">Live Project</a>
-            <a href="https://github.com/jeetech77/Batman-Quiz" class="buttons links secondary-link">Source Code</a>
+            <a href="https://playwithplants.netlify.app/" class="buttons links primary-link">Live Project</a>
+            <a href="https://github.com/jeetech77/Play-With-Plants" class="buttons links secondary-link">Source Code</a>
         </div>
     </section>
     <section class="sec-off-white">
@@ -59,7 +67,8 @@
     <section>
         <div class="container-center">
             <h3 class="sec-heading ">Banana Talk</h3>
-            <div class="sec-text">We love <strong>Minions</strong>, do you know the language they speak is a real
+            <div class="sec-text">We love <strong>Minions</strong>, do you even know that the language they used to
+                speak is a real
                 language, here you can translate English to Minion language.</div>
         </div>
         <div class="container">
@@ -82,8 +91,8 @@
     </section>
     <section>
         <h3 class="sec-heading">BATMAN QUIZ</h3>
-        <div class="sec-text">Are you a <strong>Batman</strong> fan, so play the quiz and check how much yoou know about
-            him.</strong></div>
+        <div class="sec-text">Are you a <strong>Batman</strong> fan, Let's have a quiz on some facts about
+            <strong>Batman.</strong></div>
         <div class="container">
             <a href="https://replit.com/@ranjeetSinghs/BatmanQuiz-1#index.js?embed=1&output=1"
                 class="buttons links primary-link">Live Project</a>
