--- a/projects/projectsList.html
+++ b/projects/projectsList.html
@@ -24,7 +24,7 @@
     <section>
         <h3 class="sec-heading">Changes Calculator</h3>
         <div class="sec-text">An assignment projects of NeogCamp, Here you can calculate chnages with minimum number of
-            notes</div>
+            notes.</div>
         <div class="container">
             <a href="https://chnagescal.netlify.app/" class="buttons links primary-link">Live Project</a>
             <a href="https://github.com/jeetech77/Cash-Register" class="buttons links secondary-link">Source Code</a>
@@ -38,7 +38,7 @@
         </div>
         <div class="container">
             <a href="https://favmovies.netlify.app/" class="buttons links primary-link">Live Project</a>
-            <a href="https://github.com/jeetech77/Pirates-Translation" class="buttons links secondary-link">Source
+            <a href="https://github.com/jeetech77/Fav-Movies" class="buttons links secondary-link">Source
                 Code</a>
         </div>
     </section>
