Style : Center text

--- a/projects/projectsList.html
+++ b/projects/projectsList.html
@@ -22,9 +22,12 @@
         </header>
     </div>
     <section>
-        <h3 class="sec-heading">Changes Calculator</h3>
-        <div class="sec-text">An assignment projects of NeogCamp, Here you can calculate chnages with minimum number of
-            notes.</div>
+        <div class="container-center">
+            <h3 class="sec-heading">Changes Calculator</h3>
+            <div class="sec-text">An assignment projects of NeogCamp, Here you can calculate chnages with minimum number
+                of
+                notes.</div>
+        </div>
         <div class="container">
             <a href="https://chnagescal.netlify.app/" class="buttons links primary-link">Live Project</a>
             <a href="https://github.com/jeetech77/Cash-Register" class="buttons links secondary-link">Source Code</a>
@@ -43,9 +46,11 @@
         </div>
     </section>
     <section>
-        <h3 class="sec-heading">Play with plants</h3>
-        <div class="sec-text">You must have seen that, there are few plants emojis in your emoji panel, did you even
-            know about them ? Let's figure it out.</div>
+        <div class="container-center">
+            <h3 class="sec-heading">Play with plants</h3>
+            <div class="sec-text">You must have seen that, there are few plants emojis in your emoji panel, did you even
+                know about them ? Let's figure it out.</div>
+        </div>
         <div class="container">
             <a href="https://playwithplants.netlify.app/" class="buttons links primary-link">Live Project</a>
             <a href="https://github.com/jeetech77/Play-With-Plants" class="buttons links secondary-link">Source Code</a>
