--- a/projects/projectsList.html
+++ b/projects/projectsList.html
@@ -29,8 +29,8 @@
                 notes.</div>
         </div>
         <div class="container">
-            <a href="https://chnagescal.netlify.app/" class="buttons links primary-link">Live Project</a>
-            <a href="https://github.com/jeetech77/Cash-Register" class="buttons links secondary-link">Source Code</a>
+            <a href="https://chnagescal.netlify.app/" class=" links primary-link">Live Project</a>
+            <a href="https://github.com/jeetech77/Cash-Register" class=" links secondary-link">Source Code</a>
         </div>
     </section>
     <section class="sec-off-white">
@@ -40,8 +40,8 @@
             </div>
         </div>
         <div class="container">
-            <a href="https://favmovies.netlify.app/" class="buttons links primary-link">Live Project</a>
-            <a href="https://github.com/jeetech77/Fav-Movies" class="buttons links secondary-link">Source
+            <a href="https://favmovies.netlify.app/" class=" links primary-link">Live Project</a>
+            <a href="https://github.com/jeetech77/Fav-Movies" class=" links secondary-link">Source
                 Code</a>
         </div>
     </section>
@@ -52,8 +52,8 @@
                 know about them ? Let's figure it out.</div>
         </div>
         <div class="container">
-            <a href="https://playwithplants.netlify.app/" class="buttons links primary-link">Live Project</a>
-            <a href="https://github.com/jeetech77/Play-With-Plants" class="buttons links secondary-link">Source Code</a>
+            <a href="https://playwithplants.netlify.app/" class=" links primary-link">Live Project</a>
+            <a href="https://github.com/jeetech77/Play-With-Plants" class=" links secondary-link">Source Code</a>
         </div>
     </section>
     <section class="sec-off-white">
@@ -64,8 +64,8 @@
             </div>
         </div>
         <div class="container">
-            <a href="https://pirates-translation.netlify.app/" class="buttons links primary-link">Live Project</a>
-            <a href="https://github.com/jeetech77/Pirates-Translation" class="buttons links secondary-link">Source
+            <a href="https://pirates-translation.netlify.app/" class=" links primary-link">Live Project</a>
+            <a href="https://github.com/jeetech77/Pirates-Translation" class=" links secondary-link">Source
                 Code</a>
         </div>
     </section>
@@ -77,8 +77,8 @@
                 language, here you can translate English to Minion language.</div>
         </div>
         <div class="container">
-            <a href="https://banana-talk-trans.netlify.app/" class="buttons links primary-link">Live Project</a>
-            <a href="https://github.com/jeetech77/Banana-Talk-Translator" class="buttons links secondary-link">Source
+            <a href="https://banana-talk-trans.netlify.app/" class=" links primary-link">Live Project</a>
+            <a href="https://github.com/jeetech77/Banana-Talk-Translator" class=" links secondary-link">Source
                 Code</a>
         </div>
     </section>
@@ -90,8 +90,8 @@
         </div>
         <div class="container">
             <a href="https://replit.com/@ranjeetSinghs/KnowMe#index.js?embed=1&output=1"
-                class="buttons links primary-link">Live Project</a>
-            <a href="https://github.com/jeetech77/Do-You-Know-Me" class="buttons links secondary-link">Source Code</a>
+                class=" links primary-link">Live Project</a>
+            <a href="https://github.com/jeetech77/Do-You-Know-Me" class=" links secondary-link">Source Code</a>
         </div>
     </section>
     <section>
@@ -100,8 +100,8 @@
             <strong>Batman.</strong></div>
         <div class="container">
             <a href="https://replit.com/@ranjeetSinghs/BatmanQuiz-1#index.js?embed=1&output=1"
-                class="buttons links primary-link">Live Project</a>
-            <a href="https://github.com/jeetech77/Batman-Quiz" class="buttons links secondary-link">Source Code</a>
+                class=" links primary-link">Live Project</a>
+            <a href="https://github.com/jeetech77/Batman-Quiz" class=" links secondary-link">Source Code</a>
         </div>
     </section>
     <footer>
