Add : Things to do project

--- a/projects/projectsList.html
+++ b/projects/projectsList.html
@@ -21,6 +21,18 @@
             <h1 class="hero-text">Check Out My<span class="spantext">Projects</span></h1>
         </header>
     </div>
+    <section class="sec-off-white">
+        <div class="container-center">
+            <h3 class="sec-heading ">Things To Do</h3>
+            <div class="sec-text">Felling bored, don't have any idea what to do, check out my app to get an idea about what to do as per your choice.
+            </div>
+        </div>
+        <div class="container">
+            <a href="https://thing-to-do.netlify.app/" class=" links primary-link">Live Project</a>
+            <a href="https://github.com/jeetech77/Things-To-Do" class=" links secondary-link">Source
+                Code</a>
+        </div>
+    </section>
     <section>
         <div class="container-center">
             <h3 class="sec-heading">Changes Calculator</h3>
