Feat : Link Targets

--- a/projects/projectsList.html
+++ b/projects/projectsList.html
@@ -28,8 +28,8 @@
             </div>
         </div>
         <div class="container">
-            <a href="https://thing-to-do.netlify.app/" class=" links primary-link">Live Project</a>
-            <a href="https://github.com/jeetech77/Things-To-Do" class=" links secondary-link">Source
+            <a href="https://thing-to-do.netlify.app/" class=" links primary-link" target="_blank" >Live Project</a>
+            <a href="https://github.com/jeetech77/Things-To-Do" class=" links secondary-link" target="_blank">Source
                 Code</a>
         </div>
     </section>
@@ -41,8 +41,8 @@
                 notes.</div>
         </div>
         <div class="container">
-            <a href="https://chnagescal.netlify.app/" class=" links primary-link">Live Project</a>
-            <a href="https://github.com/jeetech77/Cash-Register" class=" links secondary-link">Source Code</a>
+            <a href="https://chnagescal.netlify.app/" class=" links primary-link" target="_blank" >Live Project</a>
+            <a href="https://github.com/jeetech77/Cash-Register" class=" links secondary-link" target="_blank">Source Code</a>
         </div>
     </section>
     <section class="sec-off-white">
@@ -52,8 +52,8 @@
             </div>
         </div>
         <div class="container">
-            <a href="https://favmovies.netlify.app/" class=" links primary-link">Live Project</a>
-            <a href="https://github.com/jeetech77/Fav-Movies" class=" links secondary-link">Source
+            <a href="https://favmovies.netlify.app/" class=" links primary-link" target="_blank" >Live Project</a>
+            <a href="https://github.com/jeetech77/Fav-Movies" class=" links secondary-link" target="_blank">Source
                 Code</a>
         </div>
     </section>
@@ -64,8 +64,8 @@
                 know about them ? Let's figure it out.</div>
         </div>
         <div class="container">
-            <a href="https://playwithplants.netlify.app/" class=" links primary-link">Live Project</a>
-            <a href="https://github.com/jeetech77/Play-With-Plants" class=" links secondary-link">Source Code</a>
+            <a href="https://playwithplants.netlify.app/" class=" links primary-link" target="_blank" >Live Project</a>
+            <a href="https://github.com/jeetech77/Play-With-Plants" class=" links secondary-link" target="_blank">Source Code</a>
         </div>
     </section>
     <section class="sec-off-white">
@@ -76,8 +76,8 @@
             </div>
         </div>
         <div class="container">
-            <a href="https://pirates-translation.netlify.app/" class=" links primary-link">Live Project</a>
-            <a href="https://github.com/jeetech77/Pirates-Translation" class=" links secondary-link">Source
+            <a href="https://pirates-translation.netlify.app/" class=" links primary-link" target="_blank" >Live Project</a>
+            <a href="https://github.com/jeetech77/Pirates-Translation" class=" links secondary-link" target="_blank">Source
                 Code</a>
         </div>
     </section>
@@ -89,8 +89,8 @@
                 language, here you can translate English to Minion language.</div>
         </div>
         <div class="container">
-            <a href="https://banana-talk-trans.netlify.app/" class=" links primary-link">Live Project</a>
-            <a href="https://github.com/jeetech77/Banana-Talk-Translator" class=" links secondary-link">Source
+            <a href="https://banana-talk-trans.netlify.app/" class=" links primary-link" target="_blank" >Live Project</a>
+            <a href="https://github.com/jeetech77/Banana-Talk-Translator" class=" links secondary-link" target="_blank">Source
                 Code</a>
         </div>
     </section>
@@ -102,8 +102,8 @@
         </div>
         <div class="container">
             <a href="https://replit.com/@ranjeetSinghs/KnowMe#index.js?embed=1&output=1"
-                class=" links primary-link">Live Project</a>
-            <a href="https://github.com/jeetech77/Do-You-Know-Me" class=" links secondary-link">Source Code</a>
+                class=" links primary-link" target="_blank" >Live Project</a>
+            <a href="https://github.com/jeetech77/Do-You-Know-Me" class=" links secondary-link" target="_blank">Source Code</a>
         </div>
     </section>
     <section>
@@ -112,8 +112,8 @@
             <strong>Batman.</strong></div>
         <div class="container">
             <a href="https://replit.com/@ranjeetSinghs/BatmanQuiz-1#index.js?embed=1&output=1"
-                class=" links primary-link">Live Project</a>
-            <a href="https://github.com/jeetech77/Batman-Quiz" class=" links secondary-link">Source Code</a>
+                class=" links primary-link" target="_blank" >Live Project</a>
+            <a href="https://github.com/jeetech77/Batman-Quiz" class=" links secondary-link" target="_blank">Source Code</a>
         </div>
     </section>
     <footer>
