--- a/blogs/blogList.html
+++ b/blogs/blogList.html
@@ -57,7 +57,7 @@
                 <a href="https://twitter.com/Ranjeet20790022" class="nav-links">Twitter</a>
             </li>
             <li class="inline-list-items">
-                <a href="https://github.com/jeetech77" class="nav-links">Github</a>
+                <a href="https://github.com/jeetsdev" class="nav-links">Github</a>
             </li>
         </ul>
     </footer>
