--- a/projects/projectsList.html
+++ b/projects/projectsList.html
@@ -29,7 +29,7 @@
         </div>
         <div class="container">
             <a href="https://thing-to-do.netlify.app/" class=" links primary-link" target="_blank" >Live Project</a>
-            <a href="https://github.com/jeetech77/Things-To-Do" class=" links secondary-link" target="_blank">Source
+            <a href="https://github.com/jeetsdev/Things-To-Do" class=" links secondary-link" target="_blank">Source
                 Code</a>
         </div>
     </section>
@@ -42,7 +42,7 @@
         </div>
         <div class="container">
             <a href="https://chnagescal.netlify.app/" class=" links primary-link" target="_blank" >Live Project</a>
-            <a href="https://github.com/jeetech77/Cash-Register" class=" links secondary-link" target="_blank">Source Code</a>
+            <a href="https://github.com/jeetsdev/Cash-Register" class=" links secondary-link" target="_blank">Source Code</a>
         </div>
     </section>
     <section class="sec-off-white">
@@ -53,7 +53,7 @@
         </div>
         <div class="container">
             <a href="https://favmovies.netlify.app/" class=" links primary-link" target="_blank" >Live Project</a>
-            <a href="https://github.com/jeetech77/Fav-Movies" class=" links secondary-link" target="_blank">Source
+            <a href="https://github.com/jeetsdev/Fav-Movies" class=" links secondary-link" target="_blank">Source
                 Code</a>
         </div>
     </section>
@@ -65,7 +65,7 @@
         </div>
         <div class="container">
             <a href="https://playwithplants.netlify.app/" class=" links primary-link" target="_blank" >Live Project</a>
-            <a href="https://github.com/jeetech77/Play-With-Plants" class=" links secondary-link" target="_blank">Source Code</a>
+            <a href="https://github.com/jeetsdev/Play-With-Plants" class=" links secondary-link" target="_blank">Source Code</a>
         </div>
     </section>
     <section class="sec-off-white">
@@ -77,7 +77,7 @@
         </div>
         <div class="container">
             <a href="https://pirates-translation.netlify.app/" class=" links primary-link" target="_blank" >Live Project</a>
-            <a href="https://github.com/jeetech77/Pirates-Translation" class=" links secondary-link" target="_blank">Source
+            <a href="https://github.com/jeetsdev/Pirates-Translation" class=" links secondary-link" target="_blank">Source
                 Code</a>
         </div>
     </section>
@@ -90,7 +90,7 @@
         </div>
         <div class="container">
             <a href="https://banana-talk-trans.netlify.app/" class=" links primary-link" target="_blank" >Live Project</a>
-            <a href="https://github.com/jeetech77/Banana-Talk-Translator" class=" links secondary-link" target="_blank">Source
+            <a href="https://github.com/jeetsdev/Banana-Talk-Translator" class=" links secondary-link" target="_blank">Source
                 Code</a>
         </div>
     </section>
@@ -103,7 +103,7 @@
         <div class="container">
             <a href="https://replit.com/@ranjeetSinghs/KnowMe#index.js?embed=1&output=1"
                 class=" links primary-link" target="_blank" >Live Project</a>
-            <a href="https://github.com/jeetech77/Do-You-Know-Me" class=" links secondary-link" target="_blank">Source Code</a>
+            <a href="https://github.com/jeetsdev/Do-You-Know-Me" class=" links secondary-link" target="_blank">Source Code</a>
         </div>
     </section>
     <section>
@@ -113,7 +113,7 @@
         <div class="container">
             <a href="https://replit.com/@ranjeetSinghs/BatmanQuiz-1#index.js?embed=1&output=1"
                 class=" links primary-link" target="_blank" >Live Project</a>
-            <a href="https://github.com/jeetech77/Batman-Quiz" class=" links secondary-link" target="_blank">Source Code</a>
+            <a href="https://github.com/jeetsdev/Batman-Quiz" class=" links secondary-link" target="_blank">Source Code</a>
         </div>
     </section>
     <footer>
@@ -127,7 +127,7 @@
                 <a href="https://twitter.com/Ranjeet20790022" class="nav-links" target="_blank">Twitter</a>
             </li>
             <li class="inline-list-items">
-                <a href="https://github.com/jeetech77" class="nav-links" target="_blank">Github</a>
+                <a href="https://github.com/jeetsdev" class="nav-links" target="_blank">Github</a>
             </li>
         </ul>
     </footer>
