--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a href="https://www.linkedin.com/in/ranjeet-singh-a07017205/"class="nav-links">Linkdin</a>
             </li>
             <li class="inline-list-items">
-                <a href="https://twitter.com/Ranjeet20790022" class="nav-links">Twitter</a>
+                <a href="https://twitter.com/jeetsdev" class="nav-links">Twitter</a>
             </li>
             <li class="inline-list-items">
                 <a href="https://github.com/jeetsdev" class="nav-links">Github</a>
