--- a/projects/projectsList.html
+++ b/projects/projectsList.html
@@ -124,7 +124,7 @@
                     target="_blank">Linkdin</a>
             </li>
             <li class="inline-list-items">
-                <a href="https://twitter.com/Ranjeet20790022" class="nav-links" target="_blank">Twitter</a>
+                <a href="https://twitter.com/jeetsdev" class="nav-links" target="_blank">Twitter</a>
             </li>
             <li class="inline-list-items">
                 <a href="https://github.com/jeetsdev" class="nav-links" target="_blank">Github</a>
