--- a/blogs/blogList.html
+++ b/blogs/blogList.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <nav class="navbar">
-        <h2 class="brand-title">Blogs</h2>
+        <a href="/index.html" class="brand-link">
+            <h2 class="brand-title">&lt / @jeetsdev &gt</h2>
+        </a>
         <ul class="links">
             <li class="inline-list-items"><a href="/" class="nav-links">Home</a></li>
             <li class="inline-list-items"><a href="/projects/projectsList.html" class="nav-links">Projects</a></li>
@@ -23,28 +25,26 @@
     </div>
     <section class="sec-off-white">
         <div class="container-center">
-            <h3 class="sec-heading">Dummy Blog 1</h3>
+            <h3 class="sec-heading">Hold On! What's Semantic HTML ?</h3>
             <div class="sec-text" style="margin-bottom: 2rem;">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit dolores autem iusto atque harum neque non
-                quibusdam deleniti odio nemo beatae magni nostrum veritatis minima reprehenderit repudiandae debitis,
-                dolorem perferendis!
+                Often times I come across this jargon word Semantic in HTML,So let's understand it. As Wikipedia says, Semantic means syntactically valid string, so we can say that Semantic tags
+                mean syntactically valid tags...
             </div>
         </div>
         <div>
-            <a href="/blogs/blogList.html" class="links secondary-link">Read more</a>
+            <a href="https://jeetsdev.hashnode.dev/html-semantic-tags-why-is-it-important-to-use-semantic-html" target="_blank"class="links primary-link">Read more</a>
+            </iframe>
         </div>
     </section>
     <section >
         <div class=" container-center">
-            <h3 class="sec-heading ">Dummy Blog 2</h3>
+            <h3 class="sec-heading ">On The Way</h3>
             <div class="sec-text" style="margin-bottom: 2rem;">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non saepe et eligendi, dignissimos nostrum
-                maiores perferendis molestias ab enim similique in tempore, cumque iste. Eaque dolores eius repellat
-                accusamus! Nihil?
+                Just writing the 150th word of this article.
             </div>
         </div>
         <div>
-            <a href="/blogs/blogList.html" class="links secondary-link">Read more</a>
+            <a href="/blogs/blogList.html" class="links primary-link">Read more</a>
         </div>
     </section>
     <footer>
