Style : Nab Content

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <nav class="navbar">
-        <h2 class="brand-title">WEB DEVLOPER</h2>
+        <a href="/index.html" class="brand-link">
+            <h2 class="brand-title">&lt / @jeetsdev &gt</h2>
+        </a>
         <ul class="links">
             <li class="inline-list-items"><a href="/" class="nav-links">Home</a></li>
             <li class="inline-list-items"><a href="/projects/projectsList.html" class="nav-links">Projects</a></li>
@@ -39,8 +41,8 @@
     <section class="sec-off-white">
         <div class=" container-center">
             <h3 class="sec-heading ">Blogs</h3>
-            <div class="sec-text">I would love to share my expereince to getting through all of these things, so here
-                you can check out my blogs</div>
+            <div class="sec-text">I love writing about my learning experience and share my technical and non-technical
+                knowledge with the community. So you can read my articles here.</div>
             <a href="/blogs/blogList.html" class="links secondary-link">Blogs</a>
         </div>
     </section>
@@ -48,7 +50,7 @@
         <div class="footer-heading">Reach Me</div>
         <ul class="non-bullet-list">
             <li class="inline-list-items">
-                <a href="https://www.linkedin.com/in/ranjeet-singh-a07017205/"class="nav-links">Linkdin</a>
+                <a href="https://www.linkedin.com/in/ranjeet-singh-a07017205/" class="nav-links">Linkdin</a>
             </li>
             <li class="inline-list-items">
                 <a href="https://twitter.com/jeetsdev" class="nav-links">Twitter</a>
