--- a/projects/projectsList.html
+++ b/projects/projectsList.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <nav class="navbar">
-        <h2 class="brand-title">PROJECTS</h2>
+        <a href="/index.html" class="brand-link">
+            <h2 class="brand-title">&lt / @jeetsdev &gt</h2>
+        </a>
         <ul class="links">
             <li class="inline-list-items"><a href="/" class="nav-links">Home</a></li>
             <li class="inline-list-items"><a href="/projects/projectsList.html" class="nav-links">Projects</a></li>
